New logic for all cases quiz